Ajout coomentaire Github et retrait commentaires poubelles entre header et body

--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
-
+	<!-- Ceci est une test de add, commit et push sur GitHub -->
     <title>.</title>
-
-    
-<!-- Analytics -->
- 
-<!-- Analytics END -->
     
 </head>
 <body>
